syntax = "proto3";

option csharp_namespace = "GrpcWebApiExample";

service ProductService {
  rpc GetProductById (ProductRequest) returns (ProductResponse);
  rpc GetAllProducts (Empty) returns (stream ProductResponse);
  rpc AddProduct (stream ProductRequest) returns (AddProductResponse);
  rpc ChatWithServer (stream ProductRequest) returns (stream ProductResponse);
}

message ProductRequest {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message AddProductResponse {
  int32 totalAdded = 1;
}

message Empty {}